2003-04-16  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-url-scanner.c (camel_url_web_end): Urls are unlikely to
	end with punctuation or closing braces, so strip any of those off
	the end of the url. Fixes bug #41461.

	* tests/mime-filter/data/html.1.out: Removed a trailing \n at the
	end of the file, this is incorrect (since out input file does not
	contain one).

	* camel-mime-filter-tohtml.c (html_convert): Only output a <br> if
	we found an eoln in the input. Along the same lines, don't write a
	'\n' to the output buffer unless we've encountered that eoln in
	the input. Fixes bug #41407.

2003-04-17  Not Zed  <NotZed@Ximian.com>

	** for #40989

	* camel-text-index.c (text_index_delete): delete the block
	file/key file directly, not just its files.

	* providers/local/camel-local-folder.c (local_delete): implement,
	just delete the index file if it exists.
	camel-store-delete-folder will delete other data (maybe it all
	should be done here).

	* camel-block-file.c (camel_key_file_finalise): keep lock around
	decrementing key file use count.
	(camel_key_file_delete): new function to delete the key file (&
	close it off).
	(key_file_use): if we've been deleted, always fail.
	(camel_block_file_finalise): only close the file if its a valid
	fd.
	(block_file_use): if we've been deleted, always fail.
	(camel_block_file_delete): delete the block file & close.
	(struct _CamelBlockFilePrivate): fix the !ENABLE_THREADS case to
	still compile this.

	** for #41163

	* camel-multipart-signed.c (parse_content): Dont assume adding 1
	to line length will go to the next line.  e.g. for dos lines that
	end in \r\n.  Fix for #41163.
	(parse_boundary): util function to help above.

2003-04-15  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-gpg-context.c (gpg_verify): The gpg child process exiting
	does not necessarily mean that we've ready everything that we can
	from its pipes, so don't use gpg_ctx_op_exited() as a loop-exit